﻿IMPROVEMENTS / FIXES
- AI:
	- Set the main throttle, pitch, yaw and roll axis groups when setting the flight control state. This allows use of axis groups in BDA+ with these axes.
- VM:
	- Add option to immediately place the vessel after spawning.
	- Adjustments to movement in map mode.
	- Safer placement-lower.

v1.5.9.4
IMPROVEMENTS / FIXES
- GameModes:
	- Rewrite how repulsors work, using the default altitude as the target altitude and a decaying exponential balanced at the target altitude and with velocity damping. Include a slider for setting the strength of the repulsor effect, which affects the scale of the exponential.
- UI:
	- Update some Immelmann Turn text that was missed.
	- Favour craft close to going through waypoints to switch the camera to.
- Weapons:
	- Correction to manual aiming when the Krakensbane frame velocity is non-zero.
- RWP:
	- Season 5 Round 5:
		- Adjust how drag is applied to kerbals in S5R5 to give a smoother response.
		- Set the Immelmann angle to 0 for S5R5 since the craft designs don't pitch well.
		- Add a custom message for the GM kill for S5R5.

v1.5.9.3
IMPROVEMENTS / FIXES
- Internal:
	- Add a Semi-Logarithmic FloatRange slider UI, which gives ranges where the values are of the form: 0.8, 0.9, 1, 2, 3, ..., 8, 9, 10, 20, 30, ..., 80, 90, 100, 200.
- AI:
	- Adjustments to terrain avoidance defaults and how the threat range is calculated for better default terrain avoidance.
	- Add a slider for setting the angular size of the cone for performing an Immelmann turn, in which the craft will simply pitch up to turn to a target in that direction.
	- Fix for auto-tuning if the user moves the number of samples slider to lower than the current sample number.
- UI:
	- Add a case-insensitive filter to the vessel selection windows in Vessel Mover and Custom Spawn Templates.
	- Add a custom GUILayout.TextField with a grey placeholder string for nicer text entry boxes.