@@ -334,6 +334,13 @@ namespace BDArmory.UI
         Dictionary<string, string> deadVesselStrings = new Dictionary<string, string>(); // Cache dead vessel strings (they could potentially change during a competition, so we'll reset them at the end of competitions).
         StringBuilder deadVesselString = new StringBuilder();
 
+        float WaypointRank(string player)
+        {
+            if (!BDACompetitionMode.Instance.Scores.ScoreData.ContainsKey(player)) return 0f;
+            var score = BDACompetitionMode.Instance.Scores.ScoreData[player];
+            return (float)score.waypointsReached.Count - 0.001f * score.totalWPTime; // Rank in the VS based primarily on #waypoints passed and secondly on time.
+        }
+
         private void WindowVesselSwitcher(int id)
         {
             int numButtons = 11;
@@ -464,6 +471,24 @@ namespace BDArmory.UI
                     foreach (var weaponManagerPair in orderedWMs)
                     {
                         if (weaponManagerPair.Item2 == null) continue;
+                        try
+                        {
+                            AddVesselSwitcherWindowEntry(weaponManagerPair.Item2, weaponManagerPair.Item1, height, vesselButtonWidth);
+                        }
+                        catch (Exception e)
+                        {
+                            Debug.LogError($"[BDArmory.LoadedVesselSwitcher]: AddVesselSwitcherWindowEntry threw an exception trying to add {weaponManagerPair.Item2.vessel.vesselName} on team {weaponManagerPair.Item1} to the list: {e.Message}");
+                        }
+                        height += _buttonHeight + _buttonGap;
+                    }
+                }
+                else if (BDArmorySettings.WAYPOINTS_MODE)
+                {
+                    var orderedWMs = weaponManagers.SelectMany(tm => tm.Value, (tm, weaponManager) => new Tuple<string, MissileFire>(tm.Key, weaponManager)).Where(t => t.Item2 != null && t.Item2.vessel != null).ToList(); // Use a local copy.
+                    orderedWMs.Sort((mf1, mf2) => WaypointRank(mf2.Item2.vessel.vesselName).CompareTo(WaypointRank(mf1.Item2.vessel.vesselName)));
+                    foreach (var weaponManagerPair in orderedWMs)
+                    {
+                        if (weaponManagerPair.Item1 == null) continue;
                         try
                         {
                             AddVesselSwitcherWindowEntry(weaponManagerPair.Item2, weaponManagerPair.Item1, height, vesselButtonWidth);
@@ -713,13 +738,23 @@ namespace BDArmory.UI
             // if (BDArmorySettings.TAG_MODE)
             //     postStatus += ", " + (ContinuousSpawning.Instance.vesselsSpawningContinuously ? currentTagTime.ToString("0.0") : currentTagScore.ToString("0.0"));
             // postStatus += ")";
-            VSEntryString.Append($" ({currentScore}");
-            if (currentRocketScore > 0) VSEntryString.Append($", {currentRocketScore} rkt");
-            if (currentMissileScore > 0) VSEntryString.Append($", {currentMissileScore} mis");
-            if (currentRamScore > 0) VSEntryString.Append($", {currentRamScore} ram");
-            if (BDArmorySettings.TAG_MODE)
-                VSEntryString.Append($", {(ContinuousSpawning.Instance.vesselsSpawningContinuously ? currentTagTime : currentTagScore):0.0} tag");
-            VSEntryString.Append(")");
+            if (BDArmorySettings.WAYPOINTS_MODE)
+            {
+                if (scoreData != null) // This probably won't work if running waypoints in continuous spawning mode, but that probably doesn't work anyway!
+                {
+                    VSEntryString.Append($"  ({scoreData.waypointsReached.Count:0}, {scoreData.totalWPTime:0.0}s, {scoreData.totalWPDeviation:0.00}m), ");
+                }
+            }
+            else
+            {
+                VSEntryString.Append($" ({currentScore}");
+                if (currentRocketScore > 0) VSEntryString.Append($", {currentRocketScore} rkt");
+                if (currentMissileScore > 0) VSEntryString.Append($", {currentMissileScore} mis");
+                if (currentRamScore > 0) VSEntryString.Append($", {currentRamScore} ram");
+                if (BDArmorySettings.TAG_MODE)
+                    VSEntryString.Append($", {(ContinuousSpawning.Instance.vesselsSpawningContinuously ? currentTagTime : currentTagScore):0.0} tag");
+                VSEntryString.Append(")");
+            }
 
             if (wm.AI != null && wm.AI.currentStatus != null)
             {
